# yoloutils

./: .gitignore  INSTALL.md  Manual.md  README.md  pyproject.toml  requirements.txt  setup.py  setup.py.backup.py
doc/: Crop.md  Label.md  Labelimg.md  Manual.md  RPD.md  Test.md  Workstation.md
skills/: SKILL.md
src/netkiller/: yoloutils.py
src/netkiller/yoloutils/: __init__.py  __main__.py  classify.py  image.py  info.py  label.py  labelimg.py  test.py  workstation.py  yoloutils.py
