#[build-system]
#requires = ["yaml",
#    "torch",
#    "torchvision",
#    "ultralytics",
##    "onnx",
#    "numpy",
#    "matplotlib",
#    "opencv-python",
#    "pillow",
#    "texttable",
#    "dominate", ]

[project]
name = "netkiller-yoloutils"
version = "0.0.13"
authors = [
    { name = "Neo Chan", email = "netkiller@msn.com" },
]
description = "YOLO label & image utilities"
readme = "README.md"
requires-python = ">=3.13"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

dependencies = [
    "pillow",
    "opencv-python",
    "pyyaml",
    "tqdm",
    "texttable",
    "ultralytics",
]

[project.urls]
Homepage = "https://www.netkiller.cn"
Issues = "https://github.com/netkiller/yoloutils/issues"

[project.scripts]
yoloutils = "netkiller.yoloutils:main"